fix: Editor, Sidebar 리렌더링 현상 해결 & 한글깨지는 이슈 & 문서 최대 깊이 설정

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+  <meta charset="UTF-8" />
   <title>Outwater's Notion Cloning</title>
   <link rel="stylesheet" href="/style/index.css" />
 </head>
